# aws-app

./: .gitignore
.github/workflows/: create-pipeline.yml
infrastructure/: cdk.json  package-lock.json  package.json
infrastructure/lib/: infrastructure-stack.ts
infrastructure/lib/stacks/: api-stack.ts
infrastructure/lib/stages/: aws-app.ts
src/: pyproject.toml
src/.devcontainer/: devconatiner.env  devcontainer.json
src/app_core/: pyproject.toml
src/app_core/app_core/: app.py
src/lambdas/api_lambda/: main.py  pyproject.toml
src/lambdas/api_lambda/api_lambda/: app.py
