# pyproject.toml at the root of your project
[tool.poetry]
name = "poetry3-poetry-pyenv"
version = "0.1.0"
description = ""
authors = ["Kedharkb <kedhar.kb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
app_core = {path = "app_core", develop = true}
api_lambda = {path = "lambdas/api_lambda/", develop = true}


[tool.poetry.dev-dependencies]
pytest = "8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
